Changed the kepp to keep

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
   <p>All I can say is ...<br>
     I don't even know what to say sef 😏 <br>
     Every little moment we share, even learning stuff together, makes me smile within 😊<br>
-    All these might look small but trust me, there's alot I would love to speak about but, let us kepp pushing, moving and advancing in life. <br>
+    All these might look small but trust me, there's alot I would love to speak about but, let us keep pushing, moving and advancing in life. <br>
     There's alot that the world would offer, and i would Love to view it with you 💖💖
 </p>
   <button onclick="showSurprise()">Click me for a little surprise</button>
